fix: fixed some layout issues and optimized queries
